--- a/chatbot-rule_based/index.html
+++ b/chatbot-rule_based/index.html
@@ -1,47 +1,249 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
+    <title>Amigo Chatbot</title>
     <style>
-        #chatbox { width: 100%; height: 300px; border: 1px solid #ccc; overflow-y: auto; padding: 10px; }
-        #input { width: 80%; }
-        #send { width: 18%; }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #0d0d0d;             
+            color: #f0f0f0; 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        .head {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 19px 20px;
+            border: none;
+            border-radius: 1px;
+            background-color: #275df2;
+            font-size: 25px;
+            text-align: center;
+            font-weight: bold; /* Make the text bold */
+            color: #ffffff; /* Set the text color to white */
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.7); /* Add a bright glow effect */
+        }
+
+        .chat-container {
+            width: 95vw; /* Increase width to cover almost the entire screen width */
+            height: 90vh; /* Increase height to cover almost the entire screen height */
+            background-color: #1a1a1a; 
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: 0 1px 50px rgba(245, 242, 243, 0.5); 
+            display: flex;
+            flex-direction: column;
+        }
+
+        #chatbox {
+            flex-grow: 1;
+            padding: 20px;
+            overflow-y: auto;
+            scrollbar-width: thin;
+            scrollbar-color: #275df2 #1a1a1a; 
+            border-bottom: 1px solid #333;
+        }
+
+        #chatbox::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        #chatbox::-webkit-scrollbar-track {
+            background: #1a1a1a;
+        }
+
+        #chatbox::-webkit-scrollbar-thumb {
+            background-color: blue; 
+            border-radius: 10px;
+            border: 2px solid #1a1a1a;
+        }
+
+        .message {
+            display: inline-block; 
+            max-width: 70%; 
+            min-width: 20%; 
+            margin-bottom: 15px;
+            padding: 12px 18px;
+            border-radius: 20px;
+            line-height: 1.5;
+            word-wrap: break-word;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: fadeIn 0.3s forwards;
+            clear: both;
+        }
+
+        .user-message {
+            background-color: #3760f4; 
+            color: #fff;
+            align-self: flex-end;
+            float: right;             
+            border-bottom-right-radius: 0;
+        }
+
+        .bot-message {
+            background-color: rgb(46, 46, 46); 
+            color: #fff;
+            align-self: flex-start;
+            float: left; 
+            border-bottom-left-radius: 0;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .bot-message::after {
+            content: '▋';
+            position: absolute;
+            right: -10px;
+            bottom: 0px;
+            color: #fff;
+            animation: blink 0.7s infinite;
+        }
+
+        .no-cursor::after {
+            display: none;
+        }
+
+        @keyframes blink {
+            0%, 100% { opacity: 0; }
+            50% { opacity: 1; }
+        }
+
+        .input-area {
+            display: flex;
+            padding: 20px;
+            background-color: #262626; 
+        }
+
+        #input {
+            flex-grow: 1;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 25px;
+            background-color: #fcf9f9;
+            color: #0b0b0b;
+            font-size: 16px;
+        }
+
+        #send {
+            background-color:#3760f4; 
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            margin-left: 15px;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.3s;
+            font-size: 20px;
+        }
+
+        #send:hover {
+            background-color: #ff69b4; 
+            transform: scale(1.1);
+        }
+
+        @keyframes fadeIn {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @media (max-width: 850px) {
+            .chat-container {
+                width: 90vw; /* Adjust width for smaller screens */
+                height: 80vh; /* Adjust height for smaller screens */
+            }
+        }
     </style>
 </head>
 <body>
-    <div id="chatbox"></div>
-    <input type="text" id="input" placeholder="Type a message">
-    <button id="send">Send</button>
+    <div class="chat-container">
+        <div class="head">
+            Amigo
+        </div>
+        <div id="chatbox"></div>
+        <div class="input-area">
+            <input type="text" id="input" placeholder="Type a message...">
+            <button id="send">➤</button>
+        </div>
+    </div>
 
     <script>
-        document.getElementById('send').addEventListener('click', function() {
-            var message = document.getElementById('input').value;
-            var chatbox = document.getElementById('chatbox');
-            chatbox.innerHTML += '<div>User: ' + message + '</div>';
+        const chatbox = document.getElementById('chatbox');
+        const input = document.getElementById('input');
+        const send = document.getElementById('send');
 
-            fetch('http://localhost:5000/chat', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ message: message })
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.response && typeof data.response === 'string') {
-                    chatbox.innerHTML += '<div>Bot: ' + data.response + '</div>';
-                } else {
-                    chatbox.innerHTML += '<div>Bot: No response</div>';
+        function addMessage(content, isUser) {
+            const messageDiv = document.createElement('div');
+            messageDiv.classList.add('message');
+            messageDiv.classList.add(isUser ? 'user-message' : 'bot-message');
+            
+            if (!isUser) {
+                simulateTyping(content, messageDiv);
+            } else {
+                messageDiv.textContent = content;
+            }
+
+            chatbox.appendChild(messageDiv);
+            chatbox.scrollTop = chatbox.scrollHeight;
+        }
+
+        function simulateTyping(content, messageDiv) {
+            let i = 0;
+            const interval = setInterval(() => {
+                messageDiv.textContent += content.charAt(i);
+                i++;
+                chatbox.scrollTop = chatbox.scrollHeight; 
+                if (i === content.length) {
+                    clearInterval(interval);
+                    messageDiv.classList.add('no-cursor');
                 }
-                chatbox.scrollTop = chatbox.scrollHeight;
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                chatbox.innerHTML += '<div>Bot: Error occurred</div>';
-            });
+            }, 50);
+        }
+
+        send.addEventListener('click', function() {
+            const message = input.value.trim();
+            if (message) {
+                addMessage(message, true);
+                input.value = '';
+
+                fetch('http://localhost:5000/chat', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ message: message })
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.response && typeof data.response === 'string') {
+                        setTimeout(() => addMessage(data.response, false), 500);
+                    } else {
+                        setTimeout(() => addMessage('No response', false), 500);
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    setTimeout(() => addMessage('Error occurred', false), 500);
+                });
+            }
+        });
+
+        input.addEventListener('keypress', function(e) {
+            if (e.key === 'Enter') {
+                send.click();
+            }
         });
     </script>
 </body>
